# DSPy-Text2SQL

./: DSPy-Text2SQL.ipynb  Makefile  README.md  pyproject.toml
model_serve/: serve_model.py
src/: starling.py
