[tool.poetry]
name = "dspy-testing"
version = "0.1.0"
description = ""
authors = ["nn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
dspy-ai = "^2.4.0"
modal = "^0.62.43"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.format.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120